2007-11-06  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/numeric/lpbase.hxx:
	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/cellfuncobj.cxx:
	* source/numeric/diff.cxx:
	* source/numeric/diff_test.cxx:
	* source/numeric/funcobj.cxx:
	* source/numeric/lpbase.cxx:
	* source/numeric/lpmodel.cxx:
	* source/numeric/lpsimplex.cxx:
	* source/numeric/nlpbase.cxx:
	* source/numeric/nlpmodel.cxx:
	* source/numeric/nlpqnewton.cxx:
	* source/numeric/polyeqnsolver.cxx:
	* source/numeric/polyeqnsolver_test.cxx:
	* source/numeric/quadfitlinesearch.cxx:
	* source/numeric/quadfitlinesearch_test.cxx:
	* source/ui/lpbuilder.cxx: reverted to r10735.

2007-11-06  Fridrich Strba  <fridrich.strba@bluewin.ch>

	* source/numeric/polyeqnsolver_test.cxx,
	  source/numeric/polyeqnsolver.cxx,
	  source/numeric/nlpbase.cxx, source/numeric/funcobj.cxx,
	  source/numeric/cellfuncobj.cxx,
	  source/numeric/quadfitlinesearch_test.cxx,
	  source/numeric/quadfitlinesearch.cxx,
	  source/numeric/lpmodel.cxx, source/numeric/nlpqnewton.cxx,
	  source/numeric/lpbase.cxx, source/numeric/diff_test.cxx,
	  source/numeric/diff.cxx, source/numeric/nlpmodel.cxx,
	  source/numeric/lpsimplex.cxx, source/inc/numeric/lpbase.hxx,
	  source/ui/lpbuilder.cxx: do not flatten std:: namespace (fixes
	  some Solaris build issues, although not all)

2007-11-05  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/scsolver.src: removed a build error for the internal build
	as there was a line beginning with a '#' which the src compiler didn't
	like.

2007-11-05  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/dialog.hxx:
	* source/service/service.cxx:
	* source/ui/basedlg.cxx:
	* source/ui/dialog.cxx:
	* source/ui/solvemodel.cxx: center the message dialog across the main 
	dialog & make it a temporary instance instead of storing it with the 
	main dialog instance.

2007-11-05  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/basedlg.cxx: forgot to remove one printf statement.
	