@@ -2,6 +2,15 @@
 
 	* source/inc/numeric/lpbase.hxx:
 	* source/inc/numeric/lpmodel.hxx:
+	* source/numeric/lpbase.cxx:
+	* source/numeric/lpsolve.cxx:
+	* source/ui/lpbuilder.cxx:
+	* source/ui/solvemodel.cxx: fixed Linux build breakage mess.
+
+2007-11-06  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/numeric/lpbase.hxx:
+	* source/inc/numeric/lpmodel.hxx:
 	* source/numeric/cellfuncobj.cxx:
 	* source/numeric/diff.cxx:
 	* source/numeric/diff_test.cxx:
